<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">


    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:layout_margin="12dp">

        <EditText
            android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextSettings"
            android:hint="@string/enter_your_name"
            android:layout_marginBottom="16dp"
            android:focusableInTouchMode="true"/>

        <TextView
            android:id="@+id/toppings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:layout_marginBottom="16dp"
            style="@style/TextSettings"
            android:layout_below="@+id/text_input"/>

        <CheckBox
            android:id="@+id/checkbox_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:paddingLeft="12dp"
            android:onClick="onCheckboxClicked"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/toppings" />

        <CheckBox
            android:id="@+id/checkbox_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:paddingLeft="12dp"
            android:onClick="onCheckboxClicked"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/checkbox_cream" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_marginBottom="16dp"
            style="@style/TextSettings"
            android:layout_below="@+id/checkbox_chocolate"/>

        <LinearLayout
            android:id="@+id/horizont_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/quantity">

            <Button
                android:id="@+id/plus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/plus"
                android:onClick="increment"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"

                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/minus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/minus"
                android:onClick="decrement"/>

        </LinearLayout>
        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_summary"
            android:layout_below="@+id/horizont_line"
            style="@style/TextSettings"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_below="@+id/order_summary_text_view"
            />

        <Button
            android:id="@+id/button_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_below="@+id/price_text_view"

            android:onClick="submitOrder"/>

    </RelativeLayout>

</ScrollView>